--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - /media/sf_code/todo-app/api/node:/var:rw
     ports:
       - "3000:3000"
+    environment:
+      - DB_HOST=192.168.56.102
+      - DB_PORT=27017
     depends_on:
       - db
  
