--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - DB_HOST=192.168.56.102
+      - DB_HOST=db
       - DB_PORT=27017
       - PORT=3000
     depends_on:
